# ScholarHarvester

./: .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  harvest.yml
apps/scholarapi/: Dockerfile  README.md  pyproject.toml
apps/scholarapi/src/scholarapi/: __init__.py  config.py  db.py  main.py  schemas.py
apps/scholarapi/src/scholarapi/api/: __init__.py  repository.py  schemas.py
apps/scholarapi/src/scholarapi/db/: session.py
apps/scholarapi/tests/: conftest.py  test_api.py  test_routes.py
apps/scholarharvester/: .env.example  DATA_PROVENANCE.md  Dockerfile  LEGAL_NOTES.md  README.md  SOURCE_REGISTRY.yaml  alembic.ini  harvest.py  pyproject.toml  supa_writer.py
apps/scholarharvester/alembic/: env.py
apps/scholarharvester/alembic/versions/: 0001_initial.py  0002_institution_directory.py  20240101_000001_create_core_tables.py
apps/scholarharvester/src/scholarharvester/: __init__.py  app.py  celery_tasks.py  cli.py  config.py  database.py  legal.py  models.py  provenance.py  registry.py  seeds.py  supa_writer.py  tasks.py
apps/scholarharvester/src/scholarharvester/adapters/: __init__.py  _factory.py  base.py  ccc_articulation_pdfs.py  ccc_catalog_courses.py  ccc_pdfs.py  cccco.py  cccco_datamart_transfers.py  csu.py  csu_system_dashboards_freshman.py  csu_system_dashboards_transfer.py  ipeds.py  official.py  uc.py  uc_info_center_admissions_source_school.py  uc_info_center_freshman_discipline.py  uc_info_center_transfers_major.py  utils.py
apps/scholarharvester/src/scholarharvester/cli/: __init__.py  main.py
apps/scholarharvester/src/scholarharvester/db/: models.py  session.py
apps/scholarharvester/src/scholarharvester/scripts/: seed_demo.py
apps/scholarharvester/src/scholarharvester/services/: college_scorecard.py  runner.py
apps/scholarharvester/tests/: test_adapter_uc.py  test_adapters.py  test_cli.py  test_legal.py  test_robot_vcr.py  test_tasks.py
apps/scholarharvester/tests/cassettes/: ccc_articulation_pdfs.yaml  ccc_catalog_courses.yaml  cccco_datamart_transfers.yaml  csu_system_dashboards_transfer.yaml  uc_info_center_freshman_discipline.yaml
apps/scholarharvester/tests/fixtures/: ccc_articulation.csv  ccc_catalog.csv  cccco_transfers.csv  csu_freshman.csv  csu_transfer.csv  uc_freshman.csv  uc_source_school.csv  uc_transfers.csv
apps/scholarharvester/tests/vcr/: uc_adapter.yaml
apps/scholarpath/: .env.local.example  Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/scholarpath/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/scholarpath/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/scholarpath/components/: EvidenceDrawer.tsx  PlannerView.tsx
apps/scholarpath/lib/: admissionsGuidance.ts  api.ts  buildQuery.ts  catalog.ts  supabase.ts  types.ts  useAsyncData.ts
apps/scholarpath/public/: e2e-data.json
apps/scholarpath/scripts/: repair-next-webpack-shims.js
apps/scholarpath/styles/: globals.css
apps/scholarplanner/: README.md  package-lock.json  package.json
apps/scholarplanner/app/: layout.tsx
apps/scholarplanner/components/: EvidenceDrawer.tsx
apps/scholarplanner/lib/: buildQuery.ts
apps/zot-planner/: README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/zot-planner/app/: layout.tsx
docs/: OPERATIONS.md
src/scholar_harvester/: __init__.py  error_scanner.py
supabase/: cleanup_demo.sql  institution_migration.sql  schema.sql
tests/: test_error_scanner.py
(+79 files in other folders)
