[tool.poetry]
name = "scholarapi"
version = "0.1.0"
description = "Read-only ScholarStack API"
authors = ["ScholarStack <contact@scholarstack.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scholarapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.24"}
slowapi = "^0.1"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
sqlalchemy = "^2.0"
asyncpg = "^0.28"
httpx = "^0.26"
scholarharvester = {path = "../scholarharvester"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21"
ruff = "^0.1"

[tool.poetry.scripts]
scholarapi = "scholarapi.main:app"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
