[tool.poetry]
name = "scholarapi"
version = "1.0.0"
description = "FastAPI read-only API for Scholarstack"
authors = ["Scholarstack Team <engineering@scholarstack.local>"]
packages = [{ include = "scholarapi", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlalchemy = "^2.0.23"
psycopg = { extras = ["binary"], version = "^3.1" }
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
redis = "^5.0.1"
slowapi = "^0.1.9"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.poetry.scripts]
scholarapi = "scholarapi.main:run"
