[tool.poetry]
name = "scholarharvester"
version = "2.0.0"
description = "Lawful data collectors for the Scholarstack platform"
authors = ["Scholarstack Team <engineering@scholarstack.local>"]
packages = [{ include = "scholarharvester", from = "src" }]
readme = "README.md"

[tool.poetry.scripts]
scholarharvester = "scholarharvester.cli:run"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
typer = "^0.9.0"
structlog = "^23.3.0"
sqlalchemy = "^2.0.23"
psycopg = { extras = ["binary"], version = "^3.1" }
python-dotenv = "^1.0.0"
redis = "^5.0.1"
pendulum = "^3.0.0"
pydantic = "^2.5.0"
aiofiles = "^23.2.1"
rich = "^13.6.0"
requests = "^2.31.0"
celery = "^5.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
vcrpy = "^5.1.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]
